--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".info_clase"
+            android:theme="@style/Theme.AppCompat.DayNight.Dialog"
+            >
+
+        </activity>
     </application>
 
 </manifest>
